@@ -469,8 +469,8 @@ Indicates whether or not this is a test line.
 
 =head3 C<is_comment>
 
-Indicates whether or not this is a comment. Comments will generally
-only appear in the TAP stream if STDERR is merged to STDOUT. See the
+Indicates whether or not this is a comment. Comments will generally only
+appear in the TAP stream if STDERR is merged to STDOUT. See the
 C<merge> option.
 
 =head3 C<is_bailout>
@@ -953,7 +953,7 @@ sub _next {
     my $self   = shift;
     my $stream = $self->_stream;
 
-    my $result = $self->_grammar->tokenize( $stream->next );
+    my $result = $self->_grammar->tokenize( $stream );
 
     if ($result) {
         $self->_next_state($result);
