@@ -4,10 +4,16 @@ use strict;
 
 use lib 'lib';
 use TAP::Parser::Grammar;
+use TAP::Parser::Iterator::Array;
 
 use Test::More tests => 63;
 
 my $GRAMMAR = 'TAP::Parser::Grammar';
+
+# Quote a scalar into a stream
+sub qs($) {
+    return TAP::Parser::Iterator::Array->new( [@_] );
+}
 
 can_ok $GRAMMAR, 'new';
 ok my $grammar = $GRAMMAR->new, '... and calling it should succeed';
@@ -20,7 +26,7 @@ isa_ok $grammar, $GRAMMAR, '... and the object it returns';
 can_ok $grammar, 'token_types';
 ok my @types = sort( $grammar->token_types ),
   '... and calling it should succeed';
-is_deeply \@types, [qw(bailout comment plan test version)], 
+is_deeply \@types, [qw(bailout comment plan test version)],
   '... and return the correct token types';
 
 can_ok $grammar, 'syntax_for';
@@ -59,7 +65,7 @@ is_deeply $plan_token, $expected,
   '... and it should contain the correct data';
 
 can_ok $grammar, 'tokenize';
-ok my $token = $grammar->tokenize($plan),
+ok my $token = $grammar->tokenize( qs $plan),
   '... and calling it with data should return a token';
 is_deeply $token, $expected,
   '... and the token should contain the correct data';
@@ -82,7 +88,7 @@ $expected = {
 is_deeply $plan_token, $expected,
   '... and it should contain the correct data';
 
-ok $token = $grammar->tokenize($plan),
+ok $token = $grammar->tokenize( qs $plan),
   '... and calling it with data should return a token';
 is_deeply $token, $expected,
   '... and the token should contain the correct data';
@@ -106,7 +112,7 @@ $expected = {
 is_deeply $plan_token, $expected,
   '... and it should contain the correct data';
 
-ok $token = $grammar->tokenize($plan),
+ok $token = $grammar->tokenize( qs $plan),
   '... and calling it with data should return a token';
 is_deeply $token, $expected,
   '... and the token should contain the correct data';
@@ -123,7 +129,7 @@ my $bailout = 'Bail out!';
 like $bailout, $syntax_for{'bailout'},
   'Bail out! should match a bailout syntax';
 
-ok $token = $grammar->tokenize($bailout),
+ok $token = $grammar->tokenize( qs $bailout),
   '... and calling it with data should return a token';
 $expected = {
     'bailout' => '',
@@ -137,7 +143,7 @@ $bailout = 'Bail out! some explanation';
 like $bailout, $syntax_for{'bailout'},
   'Bail out! should match a bailout syntax';
 
-ok $token = $grammar->tokenize($bailout),
+ok $token = $grammar->tokenize( qs $bailout),
   '... and calling it with data should return a token';
 $expected = {
     'bailout' => 'some explanation',
@@ -153,7 +159,7 @@ my $comment = '# this is a comment';
 like $comment, $syntax_for{'comment'},
   'Comments should match the comment syntax';
 
-ok $token = $grammar->tokenize($comment),
+ok $token = $grammar->tokenize( qs $comment),
   '... and calling it with data should return a token';
 $expected = {
     'comment' => 'this is a comment',
@@ -168,7 +174,7 @@ is_deeply $token, $expected,
 my $test = 'ok 1 this is a test';
 like $test, $syntax_for{'test'}, 'Tests should match the test syntax';
 
-ok $token = $grammar->tokenize($test),
+ok $token = $grammar->tokenize( qs $test),
   '... and calling it with data should return a token';
 
 $expected = {
@@ -188,7 +194,7 @@ is_deeply $token, $expected,
 $test = 'not ok 2 this is a test # TODO whee!';
 like $test, $syntax_for{'test'}, 'Tests should match the test syntax';
 
-ok $token = $grammar->tokenize($test),
+ok $token = $grammar->tokenize( qs $test),
   '... and calling it with data should return a token';
 
 $expected = {
@@ -208,7 +214,7 @@ is_deeply $token, $expected,
   $test = 'ok 22 this is a test \# TODO whee!';
 like $test, $syntax_for{'test'}, 'Tests should match the test syntax';
 
-ok $token = $grammar->tokenize($test),
+ok $token = $grammar->tokenize( qs $test),
   '... and calling it with data should return a token';
 
 $expected = {
