@@ -29,6 +29,9 @@ Revision history for TAP-Parser
       turned off. This tends to reduce the temporal skew between the
       two streams so that error messages appear closer to their
       correct location.
+    - Altered the T::P::Grammar interface so that it gets a stream
+      rather than the next line from the stream in preparation for
+      making it handle YAML diagnostics.
 
 0.51 12 March 2007
     - 'execrc' file now allows 'regex' matches for tests.
